--- a/css/style.css
+++ b/css/style.css
@@ -213,3 +213,29 @@ footer{
     padding:10px;
     margin-left: 30%;
 }
+
+@media screen and (min-width:320px)and (max-width:640px){
+
+    .circulo-frio img{
+        border-radius: 50%;
+        width:150px;
+        height: 150px;
+    }
+    .circulo-cromatico h2{
+        font-size: 20px;
+    }
+    .circulo-conforma img{
+        width:50px;
+        height:50px;
+        border-radius: 50%;
+    }
+    .circulo-cromatico{
+        width:50%;
+        text-align: center;
+        padding: 10px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 10px;
+        border-radius: 10px;
+    }
+
+}
