--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ main{
     top:100px;
     right:30px;
     background:white;
-    width:40px;
-    height:40px;
+    width:5%;
+    height:5%;
     cursor: pointer; /*Pone la manito*/
     border-radius: 10px;
     box-shadow:0 0 6px rgba(0,0,0,.5)
