--- a/css/style.css
+++ b/css/style.css
@@ -224,8 +224,8 @@ footer{
         font-size: 20px;
     }
     .circulo-conforma img{
-        width:50px;
-        height:50px;
+        width:45px;
+        height:45px;
         border-radius: 50%;
     }
     .circulo-cromatico{
@@ -235,6 +235,9 @@ footer{
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-size: 10px;
         border-radius: 10px;
+    }
+    .menu-navegacion a{
+        font-size: 15px;
     }
 
 }
