--- a/css/style.css
+++ b/css/style.css
@@ -224,8 +224,8 @@ footer{
         font-size: 20px;
     }
     .circulo-conforma img{
-        width:45px;
-        height:45px;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
     }
     .circulo-cromatico{
@@ -239,5 +239,7 @@ footer{
     .menu-navegacion a{
         font-size: 15px;
     }
-
+    .Logo{
+        width:80px;
+    }
 }
