--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,8 @@ main{
 .contenedor{
     width:100%;
     height:100%;
-    margin: 60px 0 0; /*arriba-abajo lados*/
-    padding: 60px 0; /*arriba-abajo lados*/
+    margin: 20px 20px 0 0; /*arriba-abajo lados*/
+    padding: 60px 20px 0 0; /*arriba-abajo lados*/
 }
 
 .contenedor-servicio{
@@ -166,8 +166,8 @@ footer{
     justify-content: space-between; /*Los elementos se pongan uno al lado del otro, pero en las esquinas*/
     align-items: center;
     flex-wrap: wrap;
-    padding-top:40px;
-    padding-bottom:40px
+    padding-top:20px;
+    padding-bottom:20px
 }
 
 .social-media{
@@ -224,8 +224,8 @@ footer{
         font-size: 20px;
     }
     .circulo-conforma img{
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
     }
     .circulo-cromatico{
@@ -235,6 +235,7 @@ footer{
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-size: 10px;
         border-radius: 10px;
+        flex-wrap: wrap;
     }
     .menu-navegacion a{
         font-size: 15px;
@@ -242,4 +243,12 @@ footer{
     .Logo{
         width:80px;
     }
+    #frio-calido img{
+        width: 30px;
+        height: 30px;
+    }
+    .sobre-nosotros h1{
+        font-size: 30px;
+    }
+
 }
