--- a/css/style.css
+++ b/css/style.css
@@ -243,12 +243,17 @@ footer{
     .Logo{
         width:80px;
     }
-    #frio-calido img{
+    #friocalido img{
         width: 30px;
         height: 30px;
+        flex-wrap: wrap;
     }
     .sobre-nosotros h1{
-        font-size: 30px;
+        font-size: 20px;
+    }
+    .contenedor{
+        margin: 10px 10px 0 0; /*arriba-abajo lados*/
+        padding: 20px 20px 0 0; /*arriba-abajo lados*/
     }
 
 }
