--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,6 @@ footer{
     .circulo-cromatico{
         width:60%;
         text-align: center;
-        padding: 5px;
         font-size: 10px;
         border-radius: 10px;
         flex-wrap: wrap;
@@ -243,11 +242,16 @@ footer{
         width:80px;
     }
     .sobre-nosotros h1{
-        font-size: 10px;
+        font-size: 20px;
     }
     .contenedor{
-        margin: 10px 10px 0 0; /*arriba-abajo lados*/
-        padding: 20px 20px 0 0; /*arriba-abajo lados*/
+        margin: 40px 0 0 0; /*arriba-abajo lados*/
+        padding: 60px 10px 20px 0; /*arriba-abajo lados*/
     }
-
+    .circulo-frio img{
+        border-radius: 50%;
+        width:150px;
+        height: 150px;
+    }
+    
 }
