--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,8 @@ main{
 .contenedor{
     width:100%;
     height:100%;
-    margin: 20px 20px 0 0; /*arriba-abajo lados*/
-    padding: 60px 20px 0 0; /*arriba-abajo lados*/
+    margin: 20px 0 20px 0; /*arriba-abajo lados*/
+    padding: 60px 0px 20px 0; /*arriba-abajo lados*/
 }
 
 .contenedor-servicio{
@@ -244,7 +244,7 @@ footer{
         font-size: 20px;
     }
     .contenedor{
-        margin: 40px 0 0 0; /*arriba-abajo lados*/
+        margin: 40px 0 20px 0; /*arriba-abajo lados*/
         padding: 80px 10px 20px 0; /*arriba-abajo lados*/
     }
     .circulo-frio img{
